tests/modules-corpus/corpus/reject/sharing_unknown_right.pdx
// Issue #247: elaborator — sharing constraint checker
// AC test: right path unresolved in sharing constraint

structure {
  module M = structure {
    type t = int
  }
  module N = structure {
  }
}
